# rag_kolzhut

./: README.md  pyproject.toml
frontend/: index.html  styles.css
src/kolzhut_rag/: api_server.py  consts.py  encode_and_store.py  retrive.py  scraper.py
test/: test_openai.py
